--- a/about.html
+++ b/about.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce website</title>
-    
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="style.css">
@@ -43,8 +41,10 @@
     <img src="logo/247.jpg" alt="">
     <div>
         <h2>Who We Are</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis 
-            inventore qui et,<br> placeat sit a modi eaque ducimus dolores odio quaerat, distinctio harum ipsa eveniet! Earum ex molestiae quis error.</p>
+        <p> We are a passionate team dedicated to creating innovative solutions that meet our customers' needs. With a focus on quality and excellence,
+            we strive to deliver the best products and services in our industry. Our mission is to empower our clients through cutting-edge technology and exceptional support. 
+            We value integrity, collaboration, and continuous improvement, 
+            which drive us to exceed expectations every day. Join us on our journey as we grow and evolve, committed to making a positive impact in the community and beyond.</p>
     </div>
 </section>
 
