--- a/about.html
+++ b/about.html
@@ -41,7 +41,8 @@
     <img src="logo/247.jpg" alt="">
     <div>
         <h2>Who We Are</h2>
-        <p> We are a passionate team dedicated to creating innovative solutions that meet our customers' needs. With a focus on quality and excellence,
+        <p>
+            We are a passionate team dedicated to creating innovative solutions that meet our customers' needs. With a focus on quality and excellence,
             we strive to deliver the best products and services in our industry. Our mission is to empower our clients through cutting-edge technology and exceptional support. 
             We value integrity, collaboration, and continuous improvement, 
             which drive us to exceed expectations every day. Join us on our journey as we grow and evolve, committed to making a positive impact in the community and beyond.</p>
